add prefix dynamic routes
