# proxy_service/docs/swagger.json
@@ -323,7 +323,7 @@
                 }
             }
         },
-        "/users/{username}": {
+        "/user/{username}": {
             "delete": {
                 "description": "Delete an existing user account (admin only)",
                 "produces": [
@@ -382,7 +382,7 @@
                 }
             }
         },
-        "/users/{username}/role": {
+        "/user/{username}/role": {
             "put": {
                 "description": "Update the role of an existing user (admin only)",
                 "consumes": [
